Initial caca video driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,6 +320,7 @@ dep_option(SDL_SNDIO               "Support the sndio audio API" ${UNIX_SYS} "SD
 dep_option(SDL_SNDIO_SHARED        "Dynamically load the sndio audio API" ON "SDL_SNDIO" OFF)
 set_option(SDL_RPATH               "Use an rpath when linking SDL" ${SDL_RPATH_DEFAULT})
 set_option(SDL_CLOCK_GETTIME       "Use clock_gettime() instead of gettimeofday()" ${SDL_CLOCK_GETTIME_DEFAULT})
+dep_option(SDL_CACA                "Use caca video driver" ON "SDL_VIDEO" OFF)
 dep_option(SDL_X11                 "Use X11 video driver" ${UNIX_SYS} "SDL_VIDEO" OFF)
 dep_option(SDL_X11_SHARED          "Dynamically load X11 support" ON "SDL_X11" OFF)
 set(SDL_X11_OPTIONS Xcursor Xdbe XInput Xfixes Xrandr Xscrnsaver XShape)
@@ -1243,6 +1244,13 @@ if(SDL_JOYSTICK)
 endif()
 
 if(SDL_VIDEO)
+  if(SDL_CACA)
+    sdl_link_dependency(caca LIBS caca)
+    set(SDL_VIDEO_DRIVER_CACA 1)
+    sdl_glob_sources("${SDL3_SOURCE_DIR}/src/video/caca/*.c")
+    set(HAVE_CACA TRUE)
+    set(HAVE_SDL_VIDEO TRUE)
+  endif()
   if(SDL_DUMMYVIDEO)
     set(SDL_VIDEO_DRIVER_DUMMY 1)
     sdl_glob_sources("${SDL3_SOURCE_DIR}/src/video/dummy/*.c")
